--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "puppeteer": "^5.4.0",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.5",
-    "socket.io": "^2.3.0"
+    "random-useragent": "^0.5.0",
+    "socket.io": "^2.3.0",
+    "user-agents": "^1.0.559"
   }
 }
